--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,33 +32,39 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:cardCornerRadius="4dp"
         app:cardBackgroundColor="@color/whitePrimary"
+        app:cardCornerRadius="4dp"
         app:cardElevation="4dp"
         app:layout_constraintEnd_toStartOf="@+id/cardMainPowerElectricity"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarMain">
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:padding="16dp"
+            android:layout_height="match_parent"
             android:gravity="start"
-            android:layout_height="match_parent">
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/power" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="Daya"
                 android:textColor="@color/textPrimary"
-
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
                 android:text="100 Watt"
-                android:layout_marginTop="8dp"
                 android:textColor="@color/textPrimary"
 
                 android:textSize="12sp" />
@@ -75,33 +81,40 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:padding="16dp"
-        app:cardCornerRadius="4dp"
         app:cardBackgroundColor="@color/whitePrimary"
+        app:cardCornerRadius="4dp"
         app:cardElevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardMainPower"
         app:layout_constraintTop_toBottomOf="@+id/toolbarMain">
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:padding="16dp"
+            android:layout_height="match_parent"
             android:gravity="start"
-            android:layout_height="match_parent">
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Daya Listrik"
-            android:textColor="@color/textPrimary"
-            android:textSize="16sp"/>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/car_battery" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Daya Listrik"
+                android:textStyle="bold"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/textPrimary"
+                android:textSize="16sp" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
                 android:text="100 KWh"
                 android:textColor="@color/textPrimary"
-                android:layout_marginTop="8dp"
                 android:textSize="12sp" />
 
 
@@ -117,33 +130,40 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:padding="16dp"
-        app:cardCornerRadius="4dp"
         app:cardBackgroundColor="@color/whitePrimary"
+        app:cardCornerRadius="4dp"
         app:cardElevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardMainPower">
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:padding="16dp"
+            android:layout_height="match_parent"
             android:gravity="start"
-            android:layout_height="match_parent">
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/budget" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Biaya"
+                android:layout_marginTop="8dp"
+                android:textStyle="bold"
                 android:textColor="@color/textPrimary"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
                 android:text="Rp 1.000.000"
                 android:textColor="@color/textPrimary"
-                android:layout_marginTop="8dp"
                 android:textSize="12sp" />
 
 
@@ -152,22 +172,22 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.tabs.TabLayout
-        app:tabBackground="@color/whitePrimary"
-        app:tabTextColor="@color/textPrimary"
-        app:tabIndicatorColor="@color/textPrimary"
-        app:tabSelectedTextColor="@color/textPrimary"
-        app:tabMode="fixed"
         android:id="@+id/tabMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/cardMainCost"/>
+        app:layout_constraintTop_toBottomOf="@+id/cardMainCost"
+        app:tabBackground="@color/whitePrimary"
+        app:tabIndicatorColor="@color/textPrimary"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/textPrimary"
+        app:tabTextColor="@color/textPrimary" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPagerMain"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/tabMain"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabMain" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
