--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -37,4 +37,14 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"/>
 
+    <include
+        android:visibility="invisible"
+        android:id="@+id/loadingLamp"
+        layout="@layout/progress_bar" />
+
+    <include
+        android:visibility="invisible"
+        android:id="@+id/noData"
+        layout="@layout/list_empty" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
