--- a/app/src/main/res/layout/fragment_real_four.xml
+++ b/app/src/main/res/layout/fragment_real_four.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.realtime.RealFourFragment">
 
-    <include layout="@layout/realtime_layout"/>
+    <include
+        android:id="@+id/fourFragment"
+        layout="@layout/realtime_layout"/>
 
 </FrameLayout>
