--- a/app/src/main/res/layout/fragment_real_two.xml
+++ b/app/src/main/res/layout/fragment_real_two.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.realtime.RealTwoFragment">
 
-    <include layout="@layout/realtime_layout"/>
+    <include
+        android:id="@+id/fragmentTwo"
+        layout="@layout/realtime_layout"/>
 
 </FrameLayout>
